--- a/src/main/resources/templates/join_project.html
+++ b/src/main/resources/templates/join_project.html
@@ -35,40 +35,37 @@
     <hr class="section-line">
 
     <main class="main">
+        <div class="mask">
+
+            <section class="popup-container">
+                
+                <div class="popup-text-container">
+
+                    <input type="checkbox" name="popup-confirm" id="popup-confirm">
+                    <label for="popup-confirm">
+
+                        Potwierdzam iż zapoznałem/am się z treścią danego projektu i chcę wziąć 
+                        dobrowolny udział w akcjach zorganizowanych przez organizacje
+
+                    </label>
+
+                </div>
+
+                <div class="popup-buttons-container">
+
+                    <button type="button" id="popup-yes-button" disabled onclick = "joinProject()">Zapisz się</button>
+                    <button type="button" id="popup-no-button">Zamknij</button>
+
+                </div>
+
+            </section>
+
+        </div>
 
         <section class="project-container">
 
 
         </section>
-
-        <section class="form-container">
-
-            <form action="" class="form">
-
-                <label for="fname">Imię</label>
-                <input type="text" name="fname" id="fname" required>
-
-                <label for="lname">Nazwisko</label>
-                <input type="text" name="lname" id="lname" required>
-
-                <label for="email">Email</label>
-                <input type="email" name="email" id="email" required>
-
-                <label for="telnum">Numer telefonu</label>
-                <input type="tel" name="telnum" id="telnum">
-
-                <label for="bday">Data urodzenia</label>
-                <input type="date" name="bday" id="bday">
-
-                <label for="addnotaions">Uwagi</label>
-                <input type="text" name="addnotaions" id="addnotaions">
-
-                <input type="submit" value="Zapisz się">
-
-            </form>
-
-        </section>
-        
 
     </main>
 
@@ -86,12 +83,12 @@
     <script defer>
 
         const root = document.getElementsByClassName("project-container")[0];
+        const urlArray = window.location.href.split("/");
+        const projectId = urlArray.at(-1);
 
 
         async function getProject() {
-            const urlArray = window.location.href.split("/");
-            const projectId = urlArray.at(-1);
-
+        
             console.log(projectId);
 
             try {
@@ -138,6 +135,12 @@
                         tags.innerHTML += "[" + project.tags[x].desc + "] ";
                     }
 
+                    const joinButton = document.createElement("button");
+                    joinButton.type = "button";
+                    joinButton.classList.add("project-join-button");
+                    joinButton.innerHTML = "Dołącz do projektu";
+                    joinButton.addEventListener("click", showPopup);
+
                     imgContainer.appendChild(img);
 
                     textContainer.appendChild(projectTitle);
@@ -147,6 +150,8 @@
                     tagsContainer.appendChild(tags);
 
                     textContainer.appendChild(tagsContainer);
+
+                    textContainer.appendChild(joinButton);
 
                     root.appendChild(imgContainer);
                     root.appendChild(textContainer);
@@ -159,6 +164,43 @@
                 console.log(error);
             }
         }
+
+        async function joinProject() {
+
+            try {
+                const response = await fetch('http://localhost:8080/api/project/join/' + projectId, {
+                    method: 'GET',
+                    headers: {
+                        'Content-Type': 'application/json',
+                    },
+                });
+
+                if (response.ok) {
+                    console.log(await response.text());
+                } else {
+                    console.log("cos poszlo nie tak - ", await response.text());
+                }
+
+            } catch (error) {
+                console.log(error);
+            }
+        }
+
+        function showPopup() {
+            document.querySelector(".mask").style.display = "block";
+        }
+
+        document.getElementById("popup-confirm").addEventListener("change", function() {
+            if(this.checked){
+                document.getElementById("popup-yes-button").disabled = false;
+            } else {
+                document.getElementById("popup-yes-button").disabled = true;
+            }
+        })
+        
+        document.getElementById("popup-no-button").addEventListener("click", function() {
+            document.querySelector(".mask").style.display = "none";
+        })
 
     </script>
     
