style: remove console logs

--- a/src/main/resources/templates/volunteer_home.html
+++ b/src/main/resources/templates/volunteer_home.html
@@ -155,7 +155,7 @@
                     })
 
                 } else {
-                    console.log('Blad odpowiedzi serwera', response.body);
+                    console.log('Blad odpowiedzi serwera', await response.body);
                 }
 
             } catch (error) {
