--- a/src/main/resources/templates/css/organisation-project-desc.css
+++ b/src/main/resources/templates/css/organisation-project-desc.css
@@ -13,8 +13,8 @@
 .main {
     display: grid;
     grid-template-areas: 'project volunteers' 'project tasks';
-    grid-template-columns: 65% 30%;
-    gap:0.5em;
+    grid-template-columns: 70% 25%;
+    row-gap:1em;
     justify-content: center;
     align-items: center;
     
@@ -25,11 +25,11 @@ section.project-container {
     background-image: linear-gradient(rgb(173, 178, 229),rgb(115,124,255) );
     display: grid;
     justify-content: center;
-    grid-template-columns: 40% 50%;
+    grid-template-columns: 50% 45%;
     gap:1em;
     border-radius: 2em;
     min-width:600px;
-    max-width:800px;
+    max-width:900px;
     box-shadow: 0.5em 0.5em 2em rgba(101,85,143,0.80);
 }
 
@@ -40,15 +40,14 @@ section.project-container {
 .img-container {
     text-align: center;
     margin:auto;
-    height:80%;
-    
+ 
 }
 
 .project-img {
-    width:100%;
-    height:100%;
-    object-fit: cover;
-    border-radius:2em;
+    width:max(300px, 100%);
+    height:max(300px, 100%);
+    border-radius: 2em;
+    object-fit:fill;
 }
 
 .project-short-desc{
