fix: make images display

--- a/src/main/resources/templates/edit_project_desc.html
+++ b/src/main/resources/templates/edit_project_desc.html
@@ -8,9 +8,9 @@
     <script src="https://cdn.rawgit.com/harvesthq/chosen/gh-pages/chosen.jquery.min.js"></script>
     <link href="https://cdn.rawgit.com/harvesthq/chosen/gh-pages/chosen.min.css" rel="stylesheet"/>
 
-    <link rel="stylesheet" href="css/main-layout.css">
-    <link rel="stylesheet" href="css/form-layout.css">
-    <link rel="stylesheet" href="css/edit-project-desc.css">
+    <link rel="stylesheet" href="/css/main-layout.css">
+    <link rel="stylesheet" href="/css/form-layout.css">
+    <link rel="stylesheet" href="/css/edit-project-desc.css">
     <title>Strona główna</title>
 </head>
 <body>
