--- a/src/main/resources/templates/organisation_project_desc.html
+++ b/src/main/resources/templates/organisation_project_desc.html
@@ -34,35 +34,13 @@
 
     <hr class="section-line">
 
-    <button type="button" class="edit-project-button">Zarządzaj projektem</button>
+    <button type="button" class="edit-project-button" onclick = "goToProjectManagment()">Zarządzaj projektem</button>
 
     <main class="main">
 
         <section class="project-container">
 
-                <div class="img-container">
-
-                    <img src="images/logo2mini.jpg" alt="" class="project-img">
-
-                </div>
-
-            <div class="text-container">
-
-                <h2 class="project-tittle">Tytuł projektu</h2>
-
-                <h4 class="project-short-desc">Organizator: Organizacja 1 </h4>
-
-                <p class="project-long-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum voluptate cumque ducimus nesciunt sint ipsum nostrum provident, dolor voluptatum maiores quae praesentium. Repellat omnis exercitationem veritatis explicabo nesciunt consequuntur autem. Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero numquam sint consectetur illum, architecto iste possimus beatae blanditiis doloribus facere vitae consequatur nobis mollitia suscipit ipsum nisi quam nulla minima! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odit, nobis natus! Reprehenderit, eaque quod? Impedit facere nostrum, assumenda recusandae, id optio necessitatibus, ad sapiente aliquid ratione esse ducimus cumque adipisci. Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum voluptate cumque ducimus nesciunt sint ipsum nostrum provident, dolor voluptatum maiores quae praesentium. Repellat omnis exercitationem veritatis explicabo nesciunt consequuntur autem. Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero numquam sint consectetur illum, architecto iste possimus beatae blanditiis doloribus facere vitae consequatur nobis mollitia suscipit ipsum nisi quam nulla minima! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odit, nobis natus! Reprehenderit, eaque quod? Impedit facere nostrum, assumenda recusandae, id optio necessitatibus, ad sapiente aliquid ratione esse ducimus cumque adipisci.</p>
-
-                <div class="tags-container">
-
-                    <h3 class="tag-highlight">Tagi:</h3>
-                    <p class="tags">Tag1</p>
-
-                </div>
-                
-
-            </div>
+               
 
         </section>
 
@@ -70,7 +48,7 @@
 
             <h1>Lista zadań</h1>
 
-            <div class="tasks">
+            <div class="tasks" id="tasks">
 
                 <div class="task">
 
@@ -110,27 +88,9 @@
 
             <h1>Lista członków</h1>
 
-            <div class="volunteers">
+            <div class="volunteers" id = "volunteers">
 
-                <div class="volunteer">
-                    <span>J</span> Jan Kowalski    
-                </div>
-
-                <div class="volunteer">
-                    <span>A</span> Jan Kowalski
-                </div>
-
-                <div class="volunteer">
-                    <span>R</span> Jan Kowalski
-                </div>
-
-                <div class="volunteer">
-                    <span>F</span> Jan Kowalski
-                </div>
-                
-                <div class="volunteer">
-                    <span>G</span> Jan Kowalski
-                </div>
+               
 
             </div>
 
@@ -149,6 +109,199 @@
         <div class="footer-col4">col4</div>
 
     </footer>
+    
+
+    <script defer>
+
+        async function getProject() {
+                
+                const root = document.getElementsByClassName("project-container")[0];
+                const urlArray = window.location.href.split("/");
+                const projectId = urlArray.at(-1);
+
+                try {
+                        const response = await fetch('http://localhost:8080/api/project/volunteer/' + projectId, {
+                        method: 'GET',
+                        headers: {
+                            'Content-Type': 'application/json',
+                        },
+                    });
+
+                    if (response.ok) {
+                        const project = await response.json();
+                        console.log(project);
+                        const imgContainer = document.createElement("div");
+                        imgContainer.classList.add("img-container");
+
+                        const img = document.createElement("img");
+                        img.src = project.imgPath;
+                        img.alt = "zdjecie";
+                        img.classList.add("project-img")
+
+                        const textContainer = document.createElement("div");
+                        textContainer.classList.add("text-container");
+
+                        const projectTitle = document.createElement("h2");
+                        projectTitle.classList.add("project-tittle");
+                        projectTitle.innerHTML = project.title;
+
+                        const projectShortDesc = document.createElement("h4");
+                        projectShortDesc.classList.add("project-short-desc");
+                        projectShortDesc.innerHTML = "Organizacja - " + project.orgName;
+
+                        const projectLongDesc = document.createElement("p");
+                        projectLongDesc.classList.add("project-long-desc");
+                        projectLongDesc.innerHTML = project.desc;
+
+                        const tagsContainer = document.createElement("div");
+                        tagsContainer.classList.add("tags-container");
+
+                        const tags = document.createElement("p");
+                        tags.classList.add("tags");
+
+                        for (let x in project.tags) {
+                            tags.innerHTML += "[" + project.tags[x].desc + "] ";
+                        }
+
+                        imgContainer.appendChild(img);
+
+                        textContainer.appendChild(projectTitle);
+                        textContainer.appendChild(projectShortDesc);
+                        textContainer.appendChild(projectLongDesc);
+
+                        tagsContainer.appendChild(tags);
+
+                        textContainer.appendChild(tagsContainer);
+
+                        root.appendChild(imgContainer);
+                        root.appendChild(textContainer);
+
+                    } else {
+                        console.log("blad serwera");
+                    }
+
+                } catch (error) {
+
+                    console.log(error);
+
+                }
+
+        }
+
+        async function getVolunteers() {
+
+            const root = document.getElementById("volunteers");
+            const urlArray = window.location.href.split("/");
+            const projectId = urlArray.at(-1);
+
+            try {
+                    const response = await fetch('http://localhost:8080/api/volunteer/project/' + projectId, {
+                    method: 'GET',
+                    headers: {
+                        'Content-Type': 'application/json',
+                    },
+                });
+
+                if (response.ok) {
+
+                    const result = await response.json();
+
+                    result.forEach(volunteer => {
+
+                        const div = document.createElement("div");
+                        div.classList.add("volunteer");
+                        div.innerHTML = "<span>" + volunteer.fnameAndLname[0] + "</span> " + volunteer.fnameAndLname +
+                                        "<br> Email - " + volunteer.email;
+
+                        root.appendChild(div);
+                        
+                    });
+
+                }
+
+            } catch (error) {
+                console.log(error);
+            }
+
+
+        }
+
+        async function getTasks() {
+
+            const root = document.getElementById("tasks");
+            const urlArray = window.location.href.split("/");
+            const projectId = urlArray.at(-1);
+
+            const priorityArray = [
+                "Niski",
+                "Umiarkowany",
+                "Średni",
+                "Wysoki"]
+
+            try {
+                    const response = await fetch('http://localhost:8080/api/task/project/' + projectId, {
+                    method: 'GET',
+                    headers: {
+                        'Content-Type': 'application/json',
+                    },
+                });
+
+                if (response.ok) {
+
+                    const result = await response.json();
+
+                    console.log(result);
+
+                    result.forEach(task => {
+
+                        const div = document.createElement("div");
+                        div.classList.add("task");
+
+                        const h2 = document.createElement("h2");
+                        h2.classList.add("task-tittle");
+                        h2.innerHTML = task["task-title"];
+
+                        const p = document.createElement("p");
+                        p.classList.add("task-desc");
+                        p.innerHTML = task["task-desc"];
+
+                        const span = document.createElement("span");
+                        span.classList.add("priority");
+                        span.innerHTML = "Priorytet - " + priorityArray[task.priority - 1] + ", termin - " + task.deadline;
+
+                        div.appendChild(h2);
+                        div.appendChild(p);
+                        div.appendChild(span);
+
+                        root.appendChild(div);
+                        
+                    });
+
+                }
+
+            } catch (error) {
+                console.log(error);
+            }
+            
+        }
+
+        function goToProjectManagment() {
+
+            const urlArray = window.location.href.split("/");
+            const projectId = urlArray.at(-1);
+            location.href = "http://localhost:8080/organisation/projects/edit/desc/" + projectId;
+
+        }
+
+
+        document.body.onload = function () {
+            getProject();
+            getVolunteers();
+            getTasks();
+        }
+
+
+    </script>
     
 </body>
 </html>
