--- a/src/main/resources/templates/edit_project_tasks.html
+++ b/src/main/resources/templates/edit_project_tasks.html
@@ -183,7 +183,7 @@
 
                 <h1>Lista członków</h1>
     
-                <div class="volunteers">
+                <div class="volunteers" id ="volunteers">
     
                     <div class="volunteer">
                         <span>J</span> Jan Kowalski <button type="button" class="add-volunteer-to-task-button">Dodaj</button> 
@@ -228,10 +228,155 @@
 
     <script>
 
+        const urlArray = window.location.href.split("/");
+        const projectId = urlArray.at(-1);
+
         $(".chosen-select").chosen();
         document.getElementById('tags_chosen').style.width = "";
         document.getElementsByClassName('chosen-search-input')[0].setAttribute('value',"Wybierz tagi");
         document.getElementsByClassName('chosen-search-input')[0].setAttribute('placeholder',"chosen-search-input");
+
+        async function getTasksToVolunteersContainer() {
+
+            const root = document.getElementById("task");
+
+            try {
+                const response = await fetch('http://localhost:8080/api/task/project/' + projectId, {
+                    method: 'GET',
+                    headers: {
+                        'Content-Type': 'application/json',
+                    },
+                });
+
+                if (response.ok) {
+                    response.forEach(task => {
+                        
+                        const option = document.createElement("option");
+                        option.value = task.id;
+                        option.innerHTML = task["task-title"];
+
+                        root.appendChild(option);
+
+                    });
+                }
+
+            } catch (error) {
+                console.log(error);
+            }
+
+        }
+
+        async function getVolunteersByProject() {
+
+            const root = document.getElementById("volunteers");
+            const taskId = document.getElementById("task").value;
+
+            try {
+                    const response = await fetch('http://localhost:8080/api/volunteer/withTasks' +taskId + '/project/' + projectId, {
+                    method: 'GET',
+                    headers: {
+                        'Content-Type': 'application/json',
+                    },
+                });
+
+                if (response.ok) {
+
+                    const result = await response.json();
+
+                    const volunteerWithTasks = await response2.json();
+
+                    result.forEach(volunteer => {
+
+                        const div = document.createElement("div");
+                        div.classList.add("volunteer");
+                        div.innerHTML = "<span>" + volunteer.fnameAndLname[0] + "</span> " + volunteer.fnameAndLname + 
+                        '<button type = "button" class="add-volunteer-to=task-button> Dodaj </button>';
+
+                        root.appendChild(div);
+                        
+                    });
+
+                }
+
+            } catch (error) {
+                console.log(error);
+            }
+
+
+        }
+
+        async function getTasks() {
+
+            const root = document.getElementById("tasks");
+            const urlArray = window.location.href.split("/");
+            const projectId = urlArray.at(-1);
+
+            const priorityArray = [
+                "Niski",
+                "Umiarkowany",
+                "Średni",
+                "Wysoki"]
+
+            try {
+                    const response = await fetch('http://localhost:8080/api/task/project/' + projectId, {
+                    method: 'GET',
+                    headers: {
+                        'Content-Type': 'application/json',
+                    },
+                });
+
+                if (response.ok) {
+
+                    const result = await response.json();
+
+                    console.log(result);
+
+                    result.forEach(task => {
+
+                        const div = document.createElement("div");
+                        div.classList.add("task");
+
+                        const h2 = document.createElement("h2");
+                        h2.classList.add("task-tittle");
+                        h2.innerHTML = task["task-title"];
+
+                        const p = document.createElement("p");
+                        p.classList.add("task-desc");
+                        p.innerHTML = task["task-desc"];
+
+                        const span = document.createElement("span");
+                        span.classList.add("priority");
+                        span.innerHTML = "Priorytet - " + priorityArray[task.priority - 1] + ", termin - " + task.deadline;
+
+                        const select = document.createElement("select");
+                        select.name = "priority";
+
+                        priorityArray.forEach(priority => {
+                            const option = document.createElement("option")
+                            option.value = task.priority
+                            option.innerHTML = priority;
+                            if (priorityArray[task.priority - 1] == priority) {
+                                option.selected = "selected";
+                            }
+                            select.appendChild(option);
+                        })
+
+                        div.appendChild(h2);
+                        div.appendChild(p);
+                        div.appendChild(span);
+                        div.appendChild(select);
+
+                        root.appendChild(div);
+                        
+                        });
+
+                    }
+
+                } catch (error) {
+                    console.log(error);
+                }
+
+            }
 
     </script>
     
